change skin for CopyResourceId btn (in resource preview window)
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7003 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/ResourcePreviewWindowSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/ResourcePreviewWindowSkin.mxml
@@ -95,7 +95,11 @@
 								  width="14" height="16"
 								  toolTip="Copy"
 								  skinClass="net.vdombox.ide.modules.wysiwyg.view.skins.CopyResourceIdBtnSkin"
-								  click="hostComponent.copyResourceID()"/>
+								  click="hostComponent.copyResourceID()"
+								  buttonMode="true"
+								  tabEnabled="false"
+								  focusEnabled="false"
+								  useHandCursor="true"/>
 						
 					</s:HGroup>
 				</s:VGroup>
