--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/CopyResourceIdBtnSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/CopyResourceIdBtnSkin.mxml
@@ -6,6 +6,11 @@
 	<fx:Metadata>
 		[HostComponent("spark.components.Button")]
 	</fx:Metadata>
+	<fx:Script>
+		<![CDATA[
+			import spark.filters.GlowFilter;
+		]]>
+	</fx:Script>
 	
 	
 	<s:states>
@@ -17,9 +22,13 @@
 	
 	<s:HGroup width="100%" height="100%"
 			  horizontalAlign="center" verticalAlign="middle">
+		
 		<s:BitmapImage source="@Embed('assets/btn_copy_id.png')"
 					   left="0" right="0" top="0" bottom="0" 
-					   width="100%" height="100%"/>
+					   width="100%" width.down="90%" 
+					   height="100%" height.down="90%"
+					   filters.over="{ [ new GlowFilter( 0xFFFFFF, 1, 3, 3, 2.5 ) ] }"/>
+			
 	</s:HGroup>
 	
 	
