--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/VdomObjectEditor.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/VdomObjectEditor.mxml
@@ -3,7 +3,7 @@
 					  xmlns:editors="net.vdombox.editors.*"
 					  xmlns:fx="http://ns.adobe.com/mxml/2009"
 					  xmlns:s="library://ns.adobe.com/flex/spark"
-					  height="100%" width="100%"
+					  width="100%" height="100%"
 					  skinClass="net.vdombox.ide.modules.wysiwyg.view.skins.EditorSkin"
 					  preinitialize="skinnablecontainer1_preinitializeHandler(event)"
 					  implements="net.vdombox.ide.modules.wysiwyg.interfaces.IEditor"
@@ -40,7 +40,13 @@
 
 			[SkinPart( required="true" )]
 			public var statusLabel : Label;
-
+			
+			[SkinPart( required="true" )]
+			public var strXWritten : Label;
+			
+			[SkinPart( required="true" )]
+			public var strYWritten : Label;
+			
 			private var _editorVO : EditorVO;
 
 			private var _selectedRenderer : IRenderer
@@ -259,6 +265,12 @@
 				//dispatchStateEvent();
 			}
 			
+			private function mouseMoveOnWorkArea(event : MouseEvent) : void
+			{
+				strXWritten.text = "x: " + (event.stageX - 137).toString()+ "px";
+				strYWritten.text = "y: " + (event.stageY - 179).toString() + "px";
+			}
+			
 		]]>
 	</fx:Script>
 
@@ -275,11 +287,11 @@
 		<s:VerticalLayout/>
 	</s:layout>
 
-	<s:Group id="groupPageRenderer" height="100%" width="100%" >
+	<s:Group id="groupPageRenderer" height="100%" width="100%" resize="trace('Group')" >
 		<components:PageRenderer id="renderer" 
-								 height="100%" width="100%"
+								 top="0" left="0" right="0" bottom="0"
 								 selectedRenderer="{ selectedRenderer }" includeIn="wysiwyg, wysiwygDisabled, normal, disabled" 
-								 resize="trace('PageRenderer')"/>
+								 resize="trace('PageRenderer')"  mouseMove="mouseMoveOnWorkArea(event)"/>
 
 		<editors:XMLScriptEditor id="xmlScriptEditor"
 								 height="100%" width="100%"
