Fix bug with complete background in PageRenderer
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7006 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/main/Body.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/main/Body.mxml
@@ -5,7 +5,7 @@
 		  xmlns:s="library://ns.adobe.com/flex/spark"
 		  height="100%" width="100%" gap="0" 
 		  xmlns:panels="net.vdombox.ide.modules.wysiwyg.view.components.panels.*"
-		  resize="parentApplication.dispatchEvent(new Event('rrrr'))">
+		  resize="parentApplication.dispatchEvent(new Event('resizeMainWindow'))">
 
 	<fx:Script>
 		<![CDATA[
