--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/VdomObjectEditor.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/VdomObjectEditor.mxml
@@ -3,7 +3,7 @@
 					  xmlns:editors="net.vdombox.editors.*"
 					  xmlns:fx="http://ns.adobe.com/mxml/2009"
 					  xmlns:s="library://ns.adobe.com/flex/spark"
-					  width="100%" height="100%"
+					  height="100%" width="100%"
 					  skinClass="net.vdombox.ide.modules.wysiwyg.view.skins.EditorSkin"
 					  preinitialize="skinnablecontainer1_preinitializeHandler(event)"
 					  implements="net.vdombox.ide.modules.wysiwyg.interfaces.IEditor"
@@ -40,13 +40,7 @@
 
 			[SkinPart( required="true" )]
 			public var statusLabel : Label;
-			
-			[SkinPart( required="true" )]
-			public var strXWritten : Label;
-			
-			[SkinPart( required="true" )]
-			public var strYWritten : Label;
-			
+
 			private var _editorVO : EditorVO;
 
 			private var _selectedRenderer : IRenderer
@@ -265,12 +259,6 @@
 				//dispatchStateEvent();
 			}
 			
-			private function mouseMoveOnWorkArea(event : MouseEvent) : void
-			{
-				strXWritten.text = "x: " + (event.stageX - 137).toString()+ "px";
-				strYWritten.text = "y: " + (event.stageY - 179).toString() + "px";
-			}
-			
 		]]>
 	</fx:Script>
 
@@ -287,11 +275,11 @@
 		<s:VerticalLayout/>
 	</s:layout>
 
-	<s:Group id="groupPageRenderer" height="100%" width="100%" resize="trace('Group')" >
+	<s:Group id="groupPageRenderer" height="100%" width="100%" >
 		<components:PageRenderer id="renderer" 
-								 top="0" left="0" right="0" bottom="0"
+								 height="100%" width="100%"
 								 selectedRenderer="{ selectedRenderer }" includeIn="wysiwyg, wysiwygDisabled, normal, disabled" 
-								 resize="trace('PageRenderer')"  mouseMove="mouseMoveOnWorkArea(event)"/>
+								 resize="trace('PageRenderer')"/>
 
 		<editors:XMLScriptEditor id="xmlScriptEditor"
 								 height="100%" width="100%"
