--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/PageRendererSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/PageRendererSkin.mxml
@@ -32,16 +32,15 @@
 		</s:stroke>
 	</s:Rect>
 
-	<s:Group id="background" width="100%" height="100%"/>
-
 	<s:Scroller id="scroller"
 				focusEnabled="false"
 				bottom="0" left="0" right="0" top="0"
 				minViewportInset="1">
 
 		<s:Group>
+			<s:Group id="background" width="{dataGroup.width}" height="{dataGroup.height}" resize="trace('Group')"/>
 
-			<s:DataGroup id="dataGroup"/>
+			<s:DataGroup id="dataGroup" width="100%" height="100%" resize="trace('DataGroup')"/>
 
 			<s:Group id="upperLayer"/>
 
