--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/AttributeBase.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/AttributeBase.mxml
@@ -10,6 +10,7 @@
 		<![CDATA[
 			import mx.collections.ArrayCollection;
 			import mx.collections.Sort;
+			import mx.collections.SortField;
 			import mx.controls.ComboBox;
 			import mx.core.UIComponent;
 			
@@ -20,7 +21,6 @@
 			import net.vdombox.ide.modules.wysiwyg.view.components.AttributeValidator;
 			import net.vdombox.ide.modules.wysiwyg.view.components.externalEditor.ExternalEditor;
 			
-			import spark.collections.SortField;
 			import spark.components.TextInput;
 			
 			[Bindable]
