set doubleClickHandler only to listItem (not to all resources list)
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7015 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/windows/resourceBrowserWindow/ListItem.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/windows/resourceBrowserWindow/ListItem.mxml
@@ -6,7 +6,9 @@
 				autoDrawBackground="false"
 				contentBackgroundColor="#383838"
 				contentBackgroundAlpha="0"
-				creationComplete="creationCompleteHandler(event)">
+				creationComplete="creationCompleteHandler(event)"
+				doubleClickEnabled="true"
+				doubleClick="doubleClickHandler(event)">
 	<fx:Script>
 		<![CDATA[
 			import flash.utils.setTimeout;
@@ -16,6 +18,8 @@
 			
 			import net.vdombox.ide.common.vo.ResourceVO;
 			import net.vdombox.ide.modules.wysiwyg.events.ResourceSelectorWindowEvent;
+			
+			public static var ITEM_DOUBLE_CLICKED	: String = "itemDoubleClicked";
 			
 			public var resourceVO					: ResourceVO;
 			
@@ -95,6 +99,11 @@
 			{
 				creationCompleted = true;
 				addContentElement();
+			}
+			
+			protected function doubleClickHandler(event:MouseEvent):void
+			{
+				dispatchEvent( new Event( ITEM_DOUBLE_CLICKED ) );
 			}
 			
 		]]>
